syntax = "proto3";
package streetgangpb;


message ByebyeRequest
{
	string track_id = 1;
}
